# Doom-MCX

./: .gitignore  CMakeLists.txt  Kconfig  README.md  SCR.txt  dm-doom-mcx.xml  prj.conf  west.yml
assets/: FRDM-MCXN947-TOP.avif  LCD-PAR-S035-TOP.avif
boards/: frdm_mcxn947.ld  frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay  native_posix_64.conf  native_sim_native_64.conf  native_sim_native_64.overlay
prboom2/src/: config.h  d_client.c  d_main.c  doom_iwad.h  doomdef.h  doomtype.h  f_finale.c  f_wipe.c  g_game.c  g_game.h  gba_functions.h  global_data.c  global_data.h  global_init.h  hu_lib.c  hu_stuff.c  i_audio.c  i_main.c  i_system.c  i_system.h  i_video.c  m_fixed.h  p_map.c  p_pspr.c  r_data.c  r_defs.h  r_draw.c  r_draw.h  r_hotpath.iwram.c  r_main.c  r_main.h  st_lib.c  st_stuff.h  tables.c  tables.h  v_video.c  z_zone.c  zephyr_functions.h
prboom2/src/gfx/: zephyr.h
src/: i_system_zephyr.c  i_system_zephyr.h  nxp_80x32.c  nxp_80x32.h
